--- a/form/src/App.css
+++ b/form/src/App.css
@@ -1,5 +1,3 @@
-
-
 div{
   text-align: center;
   display: flex;
@@ -30,39 +28,33 @@ button{
 button:hover{
 background-color: limegreen ;
 }
-
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Small screens (mobile devices) */
+@media screen and (max-width: 600px) {
+  /* Add your responsive styles here */
+  /* For example: */
+  body {
+    font-size: 14px;
+    background-color: blueviolet;
+    font-weight: bolder;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Medium screens (tablets) */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  /* Add your responsive styles here */
+  body {
+    background-color:grey;
+    font-weight:bolder;
+    
+}
+/* Large screens (desktops) */
+@media screen and (min-width: 1025px) {
+  /* Add your responsive styles here */
+  body {
+    background-color:purple;
+    font-weight: bolder;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+
+  
